updated api pages to use ui-router $state.go, integrated changes from master.

--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
             </li>
 
             <li id="nav-connector">
-              <a class='' href="" ui-sref="connector">
+              <a class='' href="" ui-sref="connector.devices">
                 <i class='icon-code-fork'></i>
                 <span>Connector</span>
               </a>
