--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -1,55 +1,3 @@
-<section id='content'>
-  <div class='container'>
-    <div class='row' id='content-wrapper'>
-      <div class='col-xs-12'>
-        
-        <div class='page-header page-header-with-buttons'>
-          <h1 class='pull-left'>
-            <i class='icon-code-fork'></i>
-            <span>Connector</span>              
-          </h1>
-        </div>
-        <ul class="nav nav-tabs">
-          <li id="devices">
-            <a ng-click="activeTab = 'devices'" href="/devices">Devices</a>
-          </li>
-          <li>
-            <a ng-click="activeTab = 'gateways'" href="/gateways">Gateways</a>
-          </li>
-          <li class="active">
-            <a ng-click="activeTab = 'apis'" href="/apis">APIs</a>
-          </li>
-          <li>
-            <a ng-click="activeTab = 'people'" href="/people">People</a>
-          </li>
-          <li>
-            <a ng-click="activeTab = 'devtools'" href="/tools">Developer Tools</a>
-          </li>
-        </ul>
-        <div class="tab-content">
-          <div ng-switch="activeTab">
-            <div ng-switch-when="devices">
-               <ng-include src=" 'pages/devices.html' "></ng-include>
-            </div>
-            <div ng-switch-when="gateways">
-               <ng-include src=" 'pages/gateways.html' "></ng-include>
-            </div>
-            <div ng-switch-when="apis">
-               <ng-include src=" 'pages/apis.html' "></ng-include>
-            </div>
-            <div ng-switch-when="people">
-               <ng-include src=" 'pages/people.html' "></ng-include>
-            </div>
-            <div ng-switch-when="devtools">
-               <ng-include src=" 'pages/devtools.html' "></ng-include>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-    <div class="row col-xs-12">
 
       <div ng-show="channel.logo">
         <img ng-src="{{channel.logo}}" ng-show="channel.logo" width="100" height="100"/>
@@ -92,24 +40,57 @@
 
           <div class="field">
             <label for="resource_resourcename">Auth Type</label>
-            <select class="form-control" ng-model="channel.auth_strategy" ng-options="a for a in authtypes">
+            <select class="form-control" ng-model="channel.auth_strategy" ng-options="a for a in ['none','basic','oauth']">
             </select>
           </div>
 
-          <div class="field" ng-show="channel.auth_strategy=='oauth'">
-            <label for="resource_resourcename">Consumer Key</label>
-            <input class="form-control" type="text" placeholder="Consumer Key" ng-model="channel.key" />
-          </div>
+          <!-- oAuth Settings -->
+          <span ng-show="channel.auth_strategy=='oauth'">
+            <h3>oAuth Settings</h3>
+            <br/>
 
-          <div class="field" ng-show="channel.auth_strategy=='oauth'">
-            <label for="resource_resourcename">Consumer Secret</label>
-            <input class="form-control" type="text" placeholder="Consumer Secret" ng-model="channel.secret" />
-          </div>
+            <div class="field">
+              <label for="resource_resourcename">Version</label>
+              <select class="form-control" ng-model="channel.oauth.version" ng-options="a for a in ['1.0', '2.0']">
+              </select>
+            </div>
 
-          <div class="field" ng-show="channel.auth_strategy=='oauth'">
-            <label for="resource_resourcename">Authorize Token URL</label>
-            <input class="form-control" type="text" placeholder="Authorize Token URL" ng-model="channel.authTokenURL" />
-          </div>
+            <div class="field" ng-hide="channel.oauth.version=='2.0'">
+              <label for="resource_resourcename">Consumer Key</label>
+              <input class="form-control" type="text" placeholder="Consumer Key" ng-model="channel.oauth.key" />
+            </div>
+
+            <div class="field" ng-show="channel.oauth.version=='2.0'">
+              <label for="resource_resourcename">Client Id</label>
+              <input class="form-control" type="text" placeholder="Client Id" ng-model="channel.oauth.clientId" />
+            </div>
+
+            <div class="field">
+              <label for="resource_resourcename">Secret</label>
+              <input class="form-control" type="text" placeholder="Secret" ng-model="channel.oauth.secret" />
+            </div>
+
+            <div class="field" ng-show="channel.oauth.version=='2.0'">
+              <label for="resource_resourcename">Token Key</label>
+              <input class="form-control" type="text" placeholder="Token Key" ng-model="channel.oauth.sessionKey" />
+            </div>
+
+            <div class="field" ng-hide="channel.oauth.version=='2.0'">
+              <label for="resource_resourcename">Access Token URL</label>
+              <input class="form-control" type="text" placeholder="Authorize Token URL" ng-model="channel.oauth.accessTokenURL" />
+            </div>
+
+            <div class="field" ng-hide="channel.oauth.version=='2.0'">
+              <label for="resource_resourcename">Request Token URL</label>
+              <input class="form-control" type="text" placeholder="Authorize Token URL" ng-model="channel.oauth.requestTokenURL" />
+            </div>
+
+            <div class="field">
+              <label for="resource_resourcename">Authorize Token URL</label>
+              <input class="form-control" type="text" placeholder="Authorize Token URL" ng-model="channel.oauth.authTokenURL" />
+            </div>
+            
+          </span>
 
         </fieldset>
 
@@ -159,10 +140,6 @@
         </div>
 
         <div>&nbsp;</div>
-
-      </div>
-
-</section>
 
 <script type="text/ng-template" id="editResource.html">
     <div class="modal-header">
