--- a/public/pages/connector.html
+++ b/public/pages/connector.html
@@ -17,7 +17,7 @@
             <a href="" ui-sref="connector.gateway">Gateways</a>
           </li>
           <li ng-class="{'active': state.is('connector.apis')}">
-            <a href="" ui-sref="connector.apis">APIs</a>
+            <a href="" ui-sref="connector.apis.index">APIs</a>
           </li>
           <li ng-class="{'active': state.is('connector.people')}">
             <a href="" ui-sref="connector.people">People</a>
