--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -1,99 +1,43 @@
 <section id='content'>
   <div class='container'>
     <div class='row' id='content-wrapper'>
-      <div class='col-xs-12' ng-controller='communityController'>
+      <div class='col-xs-12'>
 
         <div class='page-header page-header-with-buttons'>
           <div class='hidden-sm hidden-xs'>
             <h1 class='pull-left'>
               <span>
                 <i class='icon-group'></i>
-                <span>Community</span>              
+                <span>Community</span>
               </span>
             </h1>
-            <span class='pull-right'>
-              <button type='button' class='btn btn-success' ng-click='newPost()'>
-                Create a New Post
-              </button>
-            </span>
           </div>
           <div class='hidden-md hidden-lg'>
             <h1 style='margin-bottom: 1em;'>
               <i class='icon-group'></i>
-              <span>Community</span>              
+              <span>Community</span>
             </h1>
-            <button type='button' class='btn btn-success' ng-click='newPost()'>
-              Create a New Post
-            </button>
           </div>
         </div>
-
-        <div class='modal fade' id='new-post-form' tabindex='-1' role='dialog' aria-labelledby='new-post-form-title' aria-hidden='true'>
-          <div class='modal-dialog'>
-            <div class='modal-content'>
-              <div class='modal-header'>
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="new-post-form-title">New Post</h4>
-              </div>
-              <div class='modal-body'>
-                <form role='form' ng-submit='createPost()'>
-                  <div class='form-group'>
-                    <input type='text' class='form-control' placeholder='Title' ng-model='post.title' />
-                  </div>
-                  <div class='form-group'>
-                    <textarea class='form-control' placeholder='Content'  ng-model='post.markdownContent'></textarea>
-                    <div class='help-block'>
-                      Content can be formatted using <a href='http://daringfireball.net/projects/markdown/basics' target='blank'>Markdown</a>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class='modal-footer'>
-                <button type='button' class='btn' data-dismiss='modal' ng-click='clearPostForm()'>
-                  Cancel
-                </button>
-                <button type='button' class='btn btn-primary' ng-click='createPost()'>
-                  Submit Post
-                </button>
-              </div>
+        <div class="row">
+            <div class="col-sm-6 box">
+                <div class="box-header">
+                    <div class="header">Blog</div>
+                </div>
+                <div class="box-content">
+                    <div class="well">Learn from our powerful knowledge base for creating projects and intergrated Octoblu systems.</div>
+                    <a href="http://blog.octoblu.com/" title="Octoblu Forum" class="btn btn-primary"><i class='icon-comments'></i>  Go to Blog</a>
+                </div>
             </div>
-          </div>
-        </div>
-
-        <table class='table table-striped table-hover hidden-sm hidden-xs'>
-          <thead>
-            <th>User</th>
-            <th>Subject</th>
-            <th>Posted</th>
-            <th>Last Updated</th>
-            <!-- <th>Replies</th> -->
-            <th>&nbsp;</th>
-          </thead>
-          <tbody>
-          <tr ng-repeat='post in posts' ng-click='showPost(post)'>
-              <td>                
-                <img width="23" height="23" alt="{{post.author.name}}" src="{{post.author.user_avatar}}" />
-                {{post.author.user_name}}
-              </td>
-              <td>
-                <a ng-href='{{postUrl(post)}}'>{{post.title}}</a>
-              </td>
-              <td>{{post.created_at | date : 'medium'}}</td>
-              <td>{{post.updated_at | date : 'medium'}}</td>
-              <td>
-                <a class='btn btn-success' ng-href='{{postUrl(post)}}'>View</a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-        <div class='list-group hidden-md hidden-lg'>
-          <a class='list-group-item' ng-href='{{postUrl(post)}}' ng-repeat='post in posts'>
-            <span class='badge'>{{post.replies.length || 0}}</span>
-            {{post.author.user_id}} posted
-            <strong>{{post.title}}</strong>
-            on {{post.created_at | date}}
-          </a>
+            <div class="col-sm-6 box">
+                <div class="box-header">
+                    <div class="header">Forum</div>
+                </div>
+                <div class="box-content">
+                    <div class="well">Connect, share and discuss Octoblu with the community.</div>
+                    <a href="http://forum.octoblu.com/" title="Octoblu Forum" class="btn btn-primary"><i class='icon-group'></i>  Go to Forum</a>
+                </div>
+            </div>
         </div>
 
       </div>
