hiding custom api from apis tab

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -79,7 +79,7 @@
 			  </ul>
 		</div>
 		
-		<div>
+		<!-- <div>
 			<h3><i class='icon-edit'></i> Custom </h3>
 	  
 		  	<ul class="channellist">
@@ -92,7 +92,7 @@
               </div>
 				</li>
 			  </ul>
-		</div>
+		</div> -->
 
  	</div>
 </div>
