--- a/public/index.html
+++ b/public/index.html
@@ -229,7 +229,12 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="angular/app.js"></script>
-    <script src="angular/services.js"></script>
+    <script src="angular/services/user.js"></script>
+    <script src="angular/services/owner.js"></script>
+    <script src="angular/services/device.js"></script>
+    <script src="angular/services/channel.js"></script>
+    <script src="angular/services/nodered.js"></script>
+    <script src="angular/services/message.js"></script>
     <script src="angular/controllers.js"></script>
     <script src="angular/directives.js"></script>
     <script src="assets/javascripts/athenaSlide.js"></script>
