Migrating connector tab to new layout.

--- a/public/index.html
+++ b/public/index.html
@@ -236,6 +236,7 @@
     <script src="angular/services/nodered.js"></script>
     <script src="angular/services/message.js"></script>
     <script src="angular/controllers.js"></script>
+    <script src="angular/controllers/connector.js"></script>
     <script src="angular/directives.js"></script>
     <script src="assets/javascripts/athenaSlide.js"></script>
     <script src="assets/javascripts/underscore.js"></script>
