added controller for dev tools

--- a/public/pages/apis.html
+++ b/public/pages/apis.html
@@ -44,7 +44,7 @@
 </div> -->
 
 
-<button class="btn btn-success pull-right" ng-click="openNewApi()">Add</button>
+<!-- <button class="btn btn-success pull-right" ng-click="openNewApi()">Add</button> -->
 
  <div class="divScroll">
  	<div class="scrollWrapper">
