updates to home page

--- a/public/pages/home2.html
+++ b/public/pages/home2.html
@@ -14,6 +14,8 @@
       <div class="slide-dot slide-active"></div>
       <div class="slide-dot"></div>
       <div class="slide-dot"></div>
+      <div class="slide-dot"></div>
+      <div class="slide-dot"></div>
     </div>
   </div>
   <div id="slidecontent">
@@ -22,15 +24,15 @@
 
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-1" class="sptext">
-          <span class="msg-ulysses">Welcome</span>
-          <span class="msg-welcome"> to Octoblu</span>
+          <span class="msg-welcome">Welcome to </span>
+          <span class="msg-ulysses">Octoblu</span>
 
         </div>
       </div>
       <!-- -->
       <div class="slide-panel" data-in="bottom" data-out="bottom">
         <div id="spt-2" class="sptext">
-          The Platform & API for the Internet of Everything
+          The Real-time Platform & API for the Internet of Everything!
         </div>
       </div>
       <!-- -->
@@ -56,14 +58,13 @@
 
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-5" class="sptext">
-          <span class="msg-welcome">Welcome</span>
-          <span class="msg-ulysses">to</span>
-          <span class="msg-welcome">Octoblu</span>
+          <span class="msg-welcome">Connect & Control </span>
+          <span class="msg-ulysses">Smart Devices</span>
         </div>
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
         <div id="spt-6" class="sptext">
-          Machine-to-Machine Instant Messaging network
+          Our Automation Hub allows you to connect devices <u>with & without</u> IP addresses
         </div>
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
@@ -88,13 +89,14 @@
       <div class="slide-panel" data-in="top" data-out="top">
         <div id="spt-5" class="sptext">
           <!-- <img src="/assets/images/ipad-presentation.png"> -->
-          <span class="msg-welcome">Welcome to </span>
-          <span class="msg-ulysses">Octoblu</span>
+          <span class="msg-welcome">Integrate  </span>
+          <span class="msg-ulysses">Channels</span>
+          <span class="msg-welcome">with Smart Devices </span>
         </div>
       </div>
       <div class="slide-panel" data-in="bottom" data-out="bottom">
         <div id="spt-6" class="sptext">
-          Drag and Drop Orchestration of Event Triggers of Things
+          New Systems & APIs being added daily!
         </div>
       </div>
       <div class="slide-panel" data-in="left" data-out="left">
@@ -113,68 +115,97 @@
         </div>
       </div>
     </div>
+
+    <div class="slide slide4">
+      <!-- <img src="/assets/images/belkin.jpg" width="100%"> -->
+
+      <div class="slide-panel" data-in="top" data-out="top">
+        <div id="spt-5" class="sptext">
+          <!-- <img src="/assets/images/ipad-presentation.png"> -->
+          <span class="msg-welcome">Drag & Drop </span>
+          <span class="msg-ulysses">Flow Designer</span>
+        </div>
+      </div>
+      <div class="slide-panel" data-in="bottom" data-out="bottom">
+        <div id="spt-6" class="sptext">
+          Drag and Drop Orchestration for Event Triggers of Things & APIs
+        </div>
+      </div>
+      <div class="slide-panel" data-in="left" data-out="left">
+        <div id="spt-7" class="sptext">
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
+                <b>More Info</b>
+          </a>
+        </div>
+      </div>
+      <!-- -->
+      <div class="slide-panel" data-in="right" data-out="right">
+        <div id="spt-8" class="sptext">
+          <a type="button" class="btn btn-default-header btn-lg cta-button" href="/login">
+            <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="slide slide5">
+      <!-- <img src="/assets/images/belkin.jpg" width="100%"> -->
+
+      <div class="slide-panel" data-in="top" data-out="top">
+        <div id="spt-5" class="sptext">
+          <!-- <img src="/assets/images/ipad-presentation.png"> -->
+          <span class="msg-welcome">Big Data & </span>
+          <span class="msg-ulysses">Artificial Intelligence</span>
+        </div>
+      </div>
+      <div class="slide-panel" data-in="bottom" data-out="bottom">
+        <div id="spt-6" class="sptext">
+          Analyze your sensor data or let Octoblu use it to automate decisions for you
+        </div>
+      </div>
+      <div class="slide-panel" data-in="left" data-out="left">
+        <div id="spt-7" class="sptext">
+          <a type="button" class="btn btn-default-header btn-lg" ng-click="gotoApis()">
+                <b>More Info</b>
+          </a>
+        </div>
+      </div>
+      <!-- -->
+      <div class="slide-panel" data-in="right" data-out="right">
+        <div id="spt-8" class="sptext">
+          <a type="button" class="btn btn-default-header btn-lg cta-button" href="/login">
+            <i class="fa fa-chevron-right btn-margin-icon"></i><b>Sign Up Now</b>
+          </a>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </div>
-<!--end home-->
 
-<!-- ****************************************** SLIDE END ****************************************** -->
-
-<!-- ****************************************** ABOUT ****************************************** -->
-
-<!-- <a name="about"></a> -->
 <div id="apis" class="section">
-<h3 class="section-height" style="color:white;">CONNECT SMART DEVICES TO CHANNELS</h3>
+<h3 class="section-height" style="color:white;">TOTAL AUTOMATION</h3>
 </div>
 
-<div class="apis">
-<!-- <img src="/assets/images/apis.png" width="100%"> -->
+<div class="apisx">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-6 col-sm-3 well text-center">
+        When
+      </div>
+    </div>
+  </div>
 </div>
 
 <div id="flow" class="section">
 <h3 class="section-height" style="color:white;">USING OUR SIMPLE DRAG AND DROP DESIGNER</h3>
 </div>
 
-<!-- <br /><br /><br /><br />
-<img src="/assets/images/designer.png" width="100%">
-<br /><br /><br /><br /> -->
 <div class="flow"></div>
-
-<!-- <div id="about" class="section">
-<h3 class="section-height" style="color:white;">AND MORE...</h3>
+<div class="container margin-top-50">
 </div>
 
-
-<div class="container">
-  <div class="row">
-    <div class="margin-top-50 col-md-10 col-md-offset-1">
-    <h2 class="sub-section-height">
-    <ul><li>
-    <p>Octoblu is a service for managing realtime connections and communications across different systems, people, and physical devices. </p>
-    </li><li>
-    <p>The service allows you to connect, design, control, and analyze the overall flow of information.</p>
-    </li><li>
-
-    <p>Octoblu simplifies management of complicated and numerous activities in one platform.</p>
-    </li></ul>
-
-    </h2>
-
-    </div>
-  </div>
-</div> -->
-
-<!-- <div class="margin-top-60 presentation-container">
-</div>
- -->
-<div class="container margin-top-50"><!--Container-->
-</div><!--Container End-->
-
-
-<!-- ****************************************** ABOUT END ****************************************** -->
-
-
-
-<!-- ****************************************** SERVICES ****************************************** -->
 <div id="services" class="section-dark">
 <h3 class="section-height" style="color:white;">SERVICES</h3>
 </div>
