mongo based oauth2 client and api activation

--- a/public/pages/api_editor.html
+++ b/public/pages/api_editor.html
@@ -71,8 +71,13 @@
             </div>
 
             <div class="field" ng-show="channel.oauth.version=='2.0'">
-              <label for="resource_resourcename">Token Key</label>
-              <input class="form-control" type="text" placeholder="Token Key" ng-model="channel.oauth.sessionKey" />
+              <label for="resource_resourcename">Base URL</label>
+              <input class="form-control" type="text" placeholder="Base URL" ng-model="channel.oauth.baseURL" />
+            </div>
+
+            <div class="field" ng-show="channel.oauth.version=='2.0'">
+              <label for="resource_resourcename">Token Path</label>
+              <input class="form-control" type="text" placeholder="Token Key" ng-model="channel.oauth.authTokenPath" />
             </div>
 
             <div class="field" ng-hide="channel.oauth.version=='2.0'">
@@ -85,7 +90,7 @@
               <input class="form-control" type="text" placeholder="Authorize Token URL" ng-model="channel.oauth.requestTokenURL" />
             </div>
 
-            <div class="field">
+            <div class="field" ng-hide="channel.oauth.version=='2.0'">
               <label for="resource_resourcename">Authorize Token URL</label>
               <input class="form-control" type="text" placeholder="Authorize Token URL" ng-model="channel.oauth.authTokenURL" />
             </div>
