--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -71,7 +71,7 @@
                   <th width="40%">Plugin</th>
                   <th width="20%">Action</th>
                 </tr>
-                <tr ng-repeat="subdevice in gateway.subdevices.value">
+                <tr ng-repeat="subdevice in gateway.subdevices">
                   <td>{{subdevice.name}}</td>
                   <td>{{subdevice.type}}</td>
                   <td>
@@ -132,10 +132,10 @@
           <input type="text" ng-model="subDeviceName" placeholder="name" class="form-control" required><br />
           <div class="form-group" ng-repeat="deviceProperty in deviceProperties">
             <div ng-if="deviceProperty.type == 'string' || deviceProperty.type == 'number'">
-              <input type="text" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
+              <input type="text" ng-model="deviceProperty" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
             </div>
             <div ng-if="deviceProperty.type == 'boolean'">
-              <input type="checkbox" ng-model="deviceProperty.value" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
+              <input type="checkbox" ng-model="deviceProperty" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
             </div>
           </div>
         </div>
