--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -2,7 +2,7 @@
   <div class='container'>
     <div class='row' id='content-wrapper'>
       <div class='col-xs-12'>
-        
+
         <div class='page-header page-header-with-buttons'>
           <h1 class='pull-left'>
             <i class='icon-code-fork'></i>
@@ -13,12 +13,12 @@
           <li ng-class="{'active': state.is('connector.devices')}">
             <a href="" ui-sref="connector.devices">Devices</a>
           </li>
-           <li ng-class="{'active': state.is('connector.apis')}">
-             <a href="" ui-sref="connector.apis.index">Channels</a>
+           <li ng-class="{'active': state.is('connector.channels')}">
+             <a href="" ui-sref="connector.channels.index">Channels</a>
            </li>
           <!-- Advanced Tab-->
             <li ng-class="{'active': state.is('connector.advanced')}">
-                <a href="" ui-sref="connector.advanced.index">Advanced</a>
+                <a href="" ui-sref="connector.advanced">Advanced</a>
             </li>
           <!--<li ng-class="{'active': state.is('connector.gateway')}">-->
             <!--<a href="" ui-sref="connector.gateway">Gateways</a>-->
