--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <link href="/assets/stylesheets/animation.css" rel="stylesheet">
   <link href="/assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
   <link href="/assets/stylesheets/athenaSlide.css" rel="stylesheet">
-  <link rel="shortcut icon" href="images/favicon.png">
+<!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
   <script src="http://skynet.im/js/skynet.js"></script>
 
